2011-07-19  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs): New customer
	option.
	(debbugs-gnu-pending): Fix docstring.
	(debbugs-gnu-current-query): New defvar.
	(debbugs-gnu-search): New command.
	(debbugs-gnu): Rename SUPPRESS-DONE to SUPPRESS.  Fix interactive
	query.
	(debbugs-gnu-print-entry): Filter according to
	`debbugs-gnu-default-suppress-bugs' and `debbugs-gnu-current-query'.
	(debbugs-gnu-toggle-suppress): Renamed from
	`debbugs-gnu-toggle-suppress-done'.

2011-07-17  Evgeny M. Zubok <zoubok@mail.ru>

	* debbugs.texi: New file.

2011-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-get-bugs): It is sufficient to have
	just one `debbugs-get-bugs' call.

2011-07-17  Evgeny M. Zubok <zoubok@mail.ru>

	* debbugs.el (debbugs-get-bugs): Add search keywords :src :maint
	:correspondent :affects and :status.  Improvement of docstring,
	document the new keywords and multiple values for one keyword.

2011-07-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-show-reports): Add packages to the
	status bar.

2011-07-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add "invalid".

2011-07-15  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-default-severities)
	(debbugs-gnu-severity-preference)
	(debbugs-gnu-send-control-message): Add "serious".
	(debbugs-gnu-select-report): Add ":" in reply subject.

2011-07-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-pending): New face.
	(debbugs-gnu-state-preference): Sort pending towards the end.

2011-07-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add "pending"
	etc.

2011-07-14  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-subject): New defvar.
	(debbugs-gnu-select-report): Set it buffer local.