@@ -1,3 +1,8 @@
+2011-07-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* debbugs-gnu.el (debbugs-guess-current-id): New function.
+	(debbugs-gnu-send-control-message): Use it.
+
 2011-07-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs-gnu.el (debbugs-gnu-default-suppress-bugs): New customer
